include_directories(${PROJECT_SOURCE_DIR}/src/Lib)

add_subdirectory(Array)
add_subdirectory(DEM)
add_subdirectory(Geometry)
add_subdirectory(HGT)
add_subdirectory(Output)
add_subdirectory(Polygon)
add_subdirectory(e00)
add_subdirectory(landcover)
add_subdirectory(poly2tri)
add_subdirectory(shapelib)
add_subdirectory(vpf)
