noinst_LIBRARIES = libGeometry.a

libGeometry_a_SOURCES = \
	contour_tree.cxx contour_tree.hxx \
	line.cxx line.hxx \
	poly_support.cxx poly_support.hxx \
	rectangle.cxx rectangle.hxx \
	trinodes.cxx trinodes.hxx \
	trisegs.cxx trisegs.hxx \
        util.cxx util.hxx

INCLUDES += \
	-I$(top_srcdir)/src \
	-I$(top_srcdir)/src/Lib \
	-I$(top_srcdir)/src/BuildTiles
